@@ -6,7 +6,7 @@ AC_INIT(decode.c)
 AC_CANONICAL_HOST
 AC_PREREQ(2.13)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(ac3dec, 0.5.3)
+AM_INIT_AUTOMAKE(ac3dec, 0.5.4)
 
 AM_MAINTAINER_MODE
 AC_PROG_CC
