@@ -3,7 +3,9 @@ AUTOMAKE_OPTIONS = 1.3 foreign
 
 CFLAGS = -Wall -Werror -O3 -g 
 
-bin_PROGRAMS = extract_ac3
+bin_PROGRAMS = extract_ac3 verify_ac3
 
 
 extract_ac3_SOURCES = extract_ac3.c
+verify_ac3_SOURCES = verify_ac3.c
+verify_ac3_LDADD = ../parse.o ../bitstream.o ../crc.o ../debug.o ../stats.o
